<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SearchFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupEmptySearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ivEmptySearch,tvEmptyTitleSearch,tvEmptyDescSearch"
        android:visibility="gone"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/defaultBgColor"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp">

            <SearchView
                android:id="@+id/svSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:iconifiedByDefault="false"
                android:queryBackground="@color/transparentColor"
                android:queryHint="@string/menu_search_videos"
                android:searchHintIcon="@null"
                android:searchIcon="@null"
                tools:targetApi="lollipop_mr1" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivEmptySearch"
        android:layout_width="@dimen/error_state_width"
        android:layout_height="@dimen/error_state_height"
        app:layout_constraintBottom_toTopOf="@+id/tvEmptyTitleSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ablSearch"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_error" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmptyTitleSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/error_search_empty_result_title"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvEmptyDescSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEmptySearch" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmptyDescSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/error_search_empty_result_desc"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmptyTitleSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ablSearch" />

    <ProgressBar
        android:id="@+id/pbSearch"
        style="@style/CircularProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="180dp" />
</androidx.constraintlayout.widget.ConstraintLayout>